Feat: allow admins to hide blog

--- a/generalDashboard/blogs.html
+++ b/generalDashboard/blogs.html
@@ -274,21 +274,28 @@
                                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus alias, sequi,</p>
 
                                             <div style="margin-top: 3rem;" class="row">
-                                                <div class="col-md-4 text-success">
-                                                    <p>Author: Adebayo</p>
+                                                <div class="col-md-6 text-success">
+                                                    <div class="row">
+                                                        <div class="col-md-6">
+                                                            <p>By: Adebayo</p>
+                                                        </div>
+                                                        <div class="col-md-6">
+                                                            <p>12-Febauary-22</p>
+                                                        </div>
+                                                    </div>
                                                 </div>
 
-                                                <div class="col-md-4 text-success">
-                                                    <p>Date: 12-Febauary-22</p>
-                                                </div>
-
-                                                <div class="col-md-4">
+                                                <div class="col-md-6">
                                                     <a href="../blogs/post.html">
                                                         <p class="btn-primary btn">View</p>
                                                     </a>
 
                                                     <a data-bs-toggle="modal" data-bs-target="#messageModal" style="margin-left: .5rem;" href="#">
                                                         <p class="btn-danger btn">Delete</p>
+                                                    </a>
+
+                                                    <a data-bs-toggle="modal" data-bs-target="#messageModal" style="margin-left: .5rem;" href="#">
+                                                        <p class="btn-outline-warning btn">Hide</p>
                                                     </a>
                                                 </div>
                                             </div>
@@ -311,21 +318,28 @@
                                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus alias, sequi,</p>
 
                                             <div style="margin-top: 3rem;" class="row">
-                                                <div class="col-md-4 text-success">
-                                                    <p>Author: Adebayo</p>
+                                                <div class="col-md-6 text-success">
+                                                    <div class="row">
+                                                        <div class="col-md-6">
+                                                            <p>By: Adebayo</p>
+                                                        </div>
+                                                        <div class="col-md-6">
+                                                            <p>12-Febauary-22</p>
+                                                        </div>
+                                                    </div>
                                                 </div>
 
-                                                <div class="col-md-4 text-success">
-                                                    <p>Date: 12-Febauary-22</p>
-                                                </div>
-
-                                                <div class="col-md-4">
+                                                <div class="col-md-6">
                                                     <a href="../blogs/post.html">
                                                         <p class="btn-primary btn">View</p>
                                                     </a>
 
                                                     <a data-bs-toggle="modal" data-bs-target="#messageModal" style="margin-left: .5rem;" href="#">
                                                         <p class="btn-danger btn">Delete</p>
+                                                    </a>
+
+                                                    <a data-bs-toggle="modal" data-bs-target="#messageModal" style="margin-left: .5rem;" href="#">
+                                                        <p class="btn-outline-warning btn">Hide</p>
                                                     </a>
                                                 </div>
                                             </div>
@@ -347,21 +361,28 @@
                                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus alias, sequi,</p>
 
                                             <div style="margin-top: 3rem;" class="row">
-                                                <div class="col-md-4 text-success">
-                                                    <p>Author: Adebayo</p>
+                                                <div class="col-md-6 text-success">
+                                                    <div class="row">
+                                                        <div class="col-md-6">
+                                                            <p>By: Adebayo</p>
+                                                        </div>
+                                                        <div class="col-md-6">
+                                                            <p>12-Febauary-22</p>
+                                                        </div>
+                                                    </div>
                                                 </div>
 
-                                                <div class="col-md-4 text-success">
-                                                    <p>Date: 12-Febauary-22</p>
-                                                </div>
-
-                                                <div class="col-md-4">
+                                                <div class="col-md-6">
                                                     <a href="../blogs/post.html">
                                                         <p class="btn-primary btn">View</p>
                                                     </a>
 
                                                     <a data-bs-toggle="modal" data-bs-target="#messageModal" style="margin-left: .5rem;" href="#">
                                                         <p class="btn-danger btn">Delete</p>
+                                                    </a>
+
+                                                    <a data-bs-toggle="modal" data-bs-target="#messageModal" style="margin-left: .5rem;" href="#">
+                                                        <p class="btn-outline-warning btn">Hide</p>
                                                     </a>
                                                 </div>
                                             </div>
