--- a/generalDashboard/taskDetails.html
+++ b/generalDashboard/taskDetails.html
@@ -236,7 +236,7 @@
                         <div class="list-item text-start" draggable="true">Delete user k*8a-9w_d#d@c</div>
 
                     </div>
-                    <div style="background-color: #212529; border-top: 1px solid #0d6efd;" class="list card">
+                    <div style="background-color: #212529; border-top: 1px solid #0d6efd;  margin: 0 15px;" class="list card">
                         <div class="card-title">
                             <p class="text-center m-0">Ongoing</h2>
                         </div>
