--- a/generalDashboard/blogs.html
+++ b/generalDashboard/blogs.html
@@ -227,7 +227,12 @@
                         <div class="card-body">
                             <div class="d-flex justify-content-between">
                                 <h5 class="card-title">What's on your mind?</h5>
-                                <button data-bs-toggle="modal" data-bs-target="#messageModal" class="btn btn-outline-primary m-2">Publish Post</button>
+                                <div class="row mb-3">
+                                    <label for="inputNumber" class="col-sm-2 col-form-label"></label>
+                                    <div class="col-sm-10">
+                                        <input class="form-control" type="file" id="formFile">
+                                    </div>
+                                </div>
                             </div>
 
                             <textarea class="tinymce-editor">
@@ -235,7 +240,9 @@
                     <p>What's on your mind today?</p>
                   </textarea>
 
+
                         </div>
+                        <button data-bs-toggle="modal" data-bs-target="#messageModal" class="btn btn-outline-primary m-2">Publish Post</button>
 
                     </div>
 
