--- a/generalDashboard/blogs.html
+++ b/generalDashboard/blogs.html
@@ -227,7 +227,7 @@
                         <div class="card-body">
                             <div class="d-flex justify-content-between">
                                 <h5 class="card-title">What's on your mind?</h5>
-                                <div class="row mb-3">
+                                <div class="row mt-2">
                                     <label for="inputNumber" class="col-sm-2 col-form-label"></label>
                                     <div class="col-sm-10">
                                         <input class="form-control" type="file" id="formFile">
@@ -236,9 +236,9 @@
                             </div>
 
                             <textarea class="tinymce-editor">
-                    <p>Hello Adebayo Drako!</p>
-                    <p>What's on your mind today?</p>
-                  </textarea>
+                                <p>Hello Adebayo Drako!</p>
+                                <p>What's on your mind today?</p>
+                            </textarea>
 
 
                         </div>
