Fix: sidebars on admin module

--- a/generalDashboard/admins.html
+++ b/generalDashboard/admins.html
@@ -127,7 +127,7 @@
 
         <ul class="sidebar-nav" id="sidebar-nav">
 
-            <li class="nav-item">
+            <li class="nav-item mt-2">
                 <a class="nav-link collapsed" href="dashboard.html">
                     <i class="bi bi-grid"></i>
                     <span>Dashboard</span>
@@ -137,21 +137,21 @@
 
             <li class="nav-heading">Pages</li>
 
-            <li class="nav-item">
+            <li class="nav-item mt-2">
                 <a class="nav-link collapsed" href="people.html">
                     <i class="bi bi-people"></i>
                     <span>People</span>
                 </a>
             </li>
 
-            <li class="nav-item">
+            <li class="nav-item mt-2">
                 <a class="nav-link" href="admins.html">
                     <i class="bi bi-people"></i>
                     <span>Admins</span>
                 </a>
             </li>
 
-            <li class="nav-item">
+            <li class="nav-item mt-2">
                 <a class="nav-link collapsed" href="activityLog.html">
                     <i class="bi bi-bar-chart"></i>
                     <span>Activity Log</span>
@@ -173,7 +173,7 @@
             </li>
 
 
-            <li class="nav-item">
+            <li class="nav-item mt-2">
                 <a class="nav-link collapsed" href="adminProfile.html">
                     <i class="bi bi-person"></i>
                     <span>My Profile</span>
@@ -181,7 +181,7 @@
             </li>
 
 
-            <!-- <li class="nav-item">
+            <!-- <li class="nav-item mt-2">
                 <a class="nav-link collapsed" href="faq.html">
                     <i class="bi bi-question-circle"></i>
                     <span>F.A.Q</span>
@@ -307,15 +307,15 @@
                                 <!-- Bordered Tabs -->
                                 <ul class="nav nav-tabs nav-tabs-bordered">
 
-                                    <li class="nav-item">
+                                    <li class="nav-item mt-2">
                                         <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#profile-edit">Profile</button>
                                     </li>
 
-                                    <li class="nav-item">
+                                    <li class="nav-item mt-2">
                                         <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-settings">Settings</button>
                                     </li>
 
-                                    <li class="nav-item">
+                                    <li class="nav-item mt-2">
                                         <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-change-password">Password</button>
                                     </li>
 
@@ -546,15 +546,15 @@
                                 <!-- Bordered Tabs -->
                                 <ul class="nav nav-tabs nav-tabs-bordered">
 
-                                    <li class="nav-item">
+                                    <li class="nav-item mt-2">
                                         <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#create-edit">Profile</button>
                                     </li>
 
-                                    <li class="nav-item">
+                                    <li class="nav-item mt-2">
                                         <button class="nav-link" data-bs-toggle="tab" data-bs-target="#create-settings">Settings</button>
                                     </li>
 
-                                    <li class="nav-item">
+                                    <li class="nav-item mt-2">
                                         <button class="nav-link" data-bs-toggle="tab" data-bs-target="#create-password">Password</button>
                                     </li>
 
