--- a/generalDashboard/activityLog.html
+++ b/generalDashboard/activityLog.html
@@ -127,7 +127,7 @@
 
         <ul class="sidebar-nav" id="sidebar-nav">
 
-            <li class="nav-item">
+            <li class="nav-item mt-2">
                 <a class="nav-link collapsed" href="dashboard.html">
                     <i class="bi bi-grid"></i>
                     <span>Dashboard</span>
@@ -137,21 +137,21 @@
 
             <li class="nav-heading">Pages</li>
 
-            <li class="nav-item">
+            <li class="nav-item mt-2">
                 <a class="nav-link collapsed" href="people.html">
                     <i class="bi bi-people"></i>
                     <span>People</span>
                 </a>
             </li>
 
-            <li class="nav-item">
+            <li class="nav-item mt-2">
                 <a class="nav-link collapsed" href="admins.html">
                     <i class="bi bi-people"></i>
                     <span>Admins</span>
                 </a>
             </li>
 
-            <li class="nav-item">
+            <li class="nav-item mt-2">
                 <a class="nav-link" href="activityLog.html">
                     <i class="bi bi-bar-chart"></i>
                     <span>Activity Log</span>
@@ -174,7 +174,7 @@
             </li>
 
 
-            <li class="nav-item">
+            <li class="nav-item mt-2">
                 <a class="nav-link collapsed" href="adminProfile.html">
                     <i class="bi bi-person"></i>
                     <span>My Profile</span>
@@ -182,7 +182,7 @@
             </li>
 
 
-            <!-- <li class="nav-item">
+            <!-- <li class="nav-item mt-2">
                 <a class="nav-link collapsed" href="faq.html">
                     <i class="bi bi-question-circle"></i>
                     <span>F.A.Q</span>
