--- a/generalDashboard/adminProfile.html
+++ b/generalDashboard/adminProfile.html
@@ -127,7 +127,7 @@
 
         <ul class="sidebar-nav" id="sidebar-nav">
 
-            <li class="nav-item">
+            <li class="nav-item mt-2">
                 <a class="nav-link collapsed" href="dashboard.html">
                     <i class="bi bi-grid"></i>
                     <span>Dashboard</span>
@@ -137,21 +137,21 @@
 
             <li class="nav-heading">Pages</li>
 
-            <li class="nav-item">
+            <li class="nav-item mt-2">
                 <a class="nav-link collapsed" href="people.html">
                     <i class="bi bi-people"></i>
                     <span>People</span>
                 </a>
             </li>
 
-            <li class="nav-item">
+            <li class="nav-item mt-2">
                 <a class="nav-link collapsed" href="admins.html">
                     <i class="bi bi-people"></i>
                     <span>Admins</span>
                 </a>
             </li>
 
-            <li class="nav-item">
+            <li class="nav-item mt-2">
                 <a class="nav-link collapsed" href="activityLog.html">
                     <i class="bi bi-bar-chart"></i>
                     <span>Activity Log</span>
@@ -174,7 +174,7 @@
             </li>
 
 
-            <li class="nav-item">
+            <li class="nav-item mt-2">
                 <a class="nav-link" href="adminProfile.html">
                     <i class="bi bi-person"></i>
                     <span>My Profile</span>
@@ -182,7 +182,7 @@
             </li>
 
 
-            <!-- <li class="nav-item">
+            <!-- <li class="nav-item mt-2">
                 <a class="nav-link collapsed" href="faq.html">
                     <i class="bi bi-question-circle"></i>
                     <span>F.A.Q</span>
@@ -225,15 +225,15 @@
                             <!-- Bordered Tabs -->
                             <ul class="nav nav-tabs nav-tabs-bordered">
 
-                                <li class="nav-item">
+                                <li class="nav-item mt-2">
                                     <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#profile-overview">Overview</button>
                                 </li>
 
-                                <li class="nav-item">
+                                <li class="nav-item mt-2">
                                     <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-edit">Edit Profile</button>
                                 </li>
 
-                                <li class="nav-item">
+                                <li class="nav-item mt-2">
                                     <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-settings">Settings</button>
                                 </li>
 
