--- a/generalDashboard/dashboard.html
+++ b/generalDashboard/dashboard.html
@@ -127,7 +127,7 @@
 
         <ul class="sidebar-nav" id="sidebar-nav">
 
-            <li class="nav-item">
+            <li class="nav-item mt-2">
                 <a class="nav-link " href="#">
                     <i class="bi bi-grid"></i>
                     <span>Dashboard</span>
@@ -137,7 +137,7 @@
 
             <li class="nav-heading">Pages</li>
 
-            <li class="nav-item">
+            <li class="nav-item mt-2">
                 <a class="nav-link collapsed" href="people.html">
                     <i class="bi bi-people"></i>
                     <span>People</span>
@@ -180,7 +180,7 @@
             </li>
 
 
-            <!-- <li class="nav-item">
+            <!-- <li class="nav-item mt-2">
                 <a class="nav-link collapsed" href="faq.html">
                     <i class="bi bi-question-circle"></i>
                     <span>F.A.Q</span>
