Feat: change landing page photo to video

--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
 
     <!-- ======= Hero Section ======= -->
     <section id="hero" class="d-flex align-items-center">
+        <video src="landingPageAssets/landingPageVideo.mp4" autoplay muted></video>
+
         <div class="container" data-aos="zoom-out" data-aos-delay="100">
             <h1><span><i style="color: #0b72a2;">Gamma Prime</i></span></h1>
             <!-- <h2 style="color: #fff;"><b>Democratising Access to AI</b></h2> -->
