Fix: centr landing page video

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
     <!-- End Header -->
 
     <!-- ======= Hero Section ======= -->
-    <section id="hero" class="d-flex align-items-center">
-        <video src="landingPageAssets/compressedvid1.mp4" autoplay muted></video>
+    <section id="hero" class="d-flex align-items-center justify-content-center">
+        <video src="landingPageAssets/gamma animated bg_8.mp4" autoplay muted></video>
 
         <div class="container" data-aos="zoom-out" data-aos-delay="100">
             <h1><span><i style="color: #0b72a2;">Gamma Prime</i></span></h1>
