Feat: chage steps to follow illustrations

--- a/index.html
+++ b/index.html
@@ -92,28 +92,28 @@
                     <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                         <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
                             <h4 style="margin-bottom: 2rem;" class="title text-center">Register</h4>
-                            <img src="landingPageAssets/img/illustration1.svg" class="img-fluid description" alt="">
+                            <img src="landingPageAssets/img/82974-add-user.gif" class="img-fluid description" alt="">
                         </div>
                     </div>
 
                     <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                         <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
                             <h4 style="margin-bottom: 2rem;" class="title text-center">Choose a track</h4>
-                            <img src="landingPageAssets/img/illus8.svg" class="img-fluid description" alt="">
+                            <img src="landingPageAssets/img/75244-analyse.gif" class="img-fluid description" alt="">
                         </div>
                     </div>
 
                     <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                         <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
                             <h4 style="margin-bottom: 2rem;" class="title text-center">Skill up</h4>
-                            <img src="landingPageAssets/img/illus6.svg" class="img-fluid description" alt="">
+                            <img src="landingPageAssets/img/83685-hubit.gif" class="img-fluid description" alt="">
                         </div>
                     </div>
 
                     <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                         <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
                             <h4 style="margin-bottom: 2rem;" class="title text-center">Deploy</h4>
-                            <img src="landingPageAssets/img/illus5.svg" class="img-fluid description" alt="">
+                            <img src="landingPageAssets/img/88282-rocket.gif" class="img-fluid description" alt="">
                         </div>
                     </div>
 
