Feat: change track UI to CSS timeline

--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
         <div class="container" data-aos="zoom-out" data-aos-delay="100">
             <h1><span><i style="color: #0b72a2;">Gamma Prime</i></span></h1>
             <!-- <h2 style="color: #fff;"><b>Democratising Access to AI</b></h2> -->
-            <h2 style="color: white;"><span class="typed" data-typed-items="Democratising Access to AI, The lights are turning ON in Africa, The revolution is here, Disrupting the status quo"></span></h2>
+            <h2 style="color: white;"><span class="typed" data-typed-items="Democratising Access to AI, The lights are turning ON in Africa, The revolution is here, Disrupting the status quo"></span>
+            </h2>
 
             <div class="d-flex">
                 <a href="#courses" class="btn-get-started scrollto">Get Started</a>
@@ -88,7 +89,7 @@
         <section id="featured-services" class="featured-services">
             <div class="container" data-aos="fade-up">
 
-                <div class="row">
+                <div style="display: none;" class="row">
                     <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                         <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
                             <h4 style="margin-bottom: 2rem;" class="title text-center">Register</h4>
@@ -117,7 +118,88 @@
                         </div>
                     </div>
 
+                </div>
 
+                <div class="Timeline mt-3">
+                    <div class="event1">
+
+                        <div class="event1Bubble">
+                            <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
+                                <img src="landingPageAssets/img/82974-add-user.gif" class="img-fluid description" alt="">
+                            </div>
+                        </div>
+                        <svg height="20" width="20">
+                            <circle cx="10" cy="11" r="5" fill="#004165" />
+                        </svg>
+                        <div class="time">Register</div>
+
+                    </div>
+
+                    <svg height="5" width="300">
+                        <line x1="0" y1="0" x2="300" y2="0" style="stroke:#004165;stroke-width:5" />
+                    </svg>
+
+                    <div class="event2">
+
+                        <div class="event1Bubble">
+                            <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
+                                <img src="landingPageAssets/img/75244-analyse.gif" class="img-fluid description" alt="">
+                            </div>
+                        </div>
+                        <svg height="20" width="20">
+                            <circle cx="10" cy="11" r="5" fill="#004165" />
+                        </svg>
+                        <div class="time">Choose a track</div>
+                    </div>
+
+                    <svg height="5" width="100">
+                        <line x1="0" y1="0" x2="100" y2="0" style="stroke:#004165;stroke-width:5" />
+                    </svg>
+
+
+                    <svg height="5" width="150">
+                        <line x1="0" y1="0" x2="150" y2="0"
+                            style="stroke:rgba(162, 164, 163, 0.37);stroke-width:5" />
+                    </svg>
+
+                    <div class="event3 futureGray ">
+                        <div class="event1Bubble">
+                            <div class="eventTime">
+                                <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
+                                    <img src="landingPageAssets/img/83685-hubit.gif" class="img-fluid description" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <svg height="20" width="20">
+                            <circle cx="10" cy="11" r="5" fill="rgba(162, 164, 163, 0.37)" />
+                        </svg>
+                        <div class="time">Skill-Up</div>
+                    </div>
+                    <svg height="5" width="300">
+                        <line x1="0" y1="0" x2="300" y2="0" style="stroke:#004165;stroke-width:5" />
+                    </svg>
+
+
+                    <div class="event3">
+                        <div class="event1Bubble">
+                            <div class="eventTime">
+                                <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
+                                    <img src="landingPageAssets/img/88282-rocket.gif" class="img-fluid description" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <svg height="20" width="20">
+                            <circle cx="10" cy="11" r="5" fill="rgba(162, 164, 163, 0.37)" />
+                        </svg>
+                        <div class="time">Deploy</div>
+                    </div>
+                    <svg height="20" width="42">
+                        <line x1="1" y1="0" x2="1" y2="20" style="stroke:#004165;stroke-width:2" />
+                        <circle cx="11" cy="10" r="3" fill="#004165" />
+                        <circle cx="21" cy="10" r="3" fill="#004165" />
+                        <circle cx="31" cy="10" r="3" fill="#004165" />
+                        <line x1="41" y1="0" x2="41" y2="20" style="stroke:#004165;stroke-width:2" />
+                    </svg>
 
                 </div>
 
@@ -147,7 +229,8 @@
                                 <i class="bx bx-store-alt"></i>
                                 <div>
                                     <h5>Education</h5>
-                                    <p>We are accelerating AI education and expertise at the grassroots in Nigeria and the rest of Africa, exponentially growing the job-ready talent locally available.</p>
+                                    <p>We are accelerating AI education and expertise at the grassroots in Nigeria and the rest of Africa, exponentially growing the job-ready talent locally available.
+                                    </p>
                                 </div>
                             </li>
                             <li>
@@ -712,7 +795,8 @@
     <!-- End Footer -->
 
     <!-- <div id="preloader"></div> -->
-    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+            class="bi bi-arrow-up-short"></i></a>
 
     <!-- Vendor JS Files -->
     <script src="landingPageAssets/vendor/purecounter/purecounter.js"></script>
