Feat: align feature cards vertically when the view is on mobile screens

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
     <!-- Main CSS File -->
     <link href="landingPageAssets/css/style.css" rel="stylesheet">
+    <link href="landingPageAssets/css/verticaltimeline.css" rel="stylesheet">
+
 
 </head>
 
@@ -89,7 +91,7 @@
         <section id="featured-services" class="featured-services">
             <div class="container" data-aos="fade-up">
 
-                <div style="display: none;" class="row">
+                <!-- <div style="display: none;" class="row">
                     <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                         <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
                             <h4 style="margin-bottom: 2rem;" class="title text-center">Register</h4>
@@ -118,7 +120,7 @@
                         </div>
                     </div>
 
-                </div>
+                </div> -->
 
                 <div class="Timeline mt-3">
                     <div class="event1">
@@ -158,8 +160,7 @@
 
 
                     <svg height="5" width="150">
-                        <line x1="0" y1="0" x2="150" y2="0"
-                            style="stroke:rgba(162, 164, 163, 0.37);stroke-width:5" />
+                        <line x1="0" y1="0" x2="150" y2="0" style="stroke:rgba(162, 164, 163, 0.37);stroke-width:5" />
                     </svg>
 
                     <div class="event3 futureGray ">
@@ -202,6 +203,73 @@
                     </svg>
 
                 </div>
+
+                <section id="cd-timeline" class="cd-container">
+                    <div class="cd-timeline-block">
+                        <div class="cd-timeline-img cd-picture">
+                        </div>
+
+                        <div class="cd-timeline-content">
+                            <h2>Register</h2>
+
+                            <div data-aos="fade-up" data-aos-delay="100">
+                                <img src="landingPageAssets/img/82974-add-user.gif" class="img-fluid description" alt="">
+                            </div>
+                        </div>
+                        <!-- cd-timeline-content -->
+                    </div>
+                    <!-- cd-timeline-block -->
+
+                    <div class="cd-timeline-block">
+                        <div class="cd-timeline-img cd-movie">
+                        </div>
+                        <!-- cd-timeline-img -->
+
+                        <div class="cd-timeline-content">
+                            <h2>Choose a track</h2>
+
+                            <div data-aos="fade-up" data-aos-delay="100">
+                                <img src="landingPageAssets/img/75244-analyse.gif" class="img-fluid description" alt="">
+                            </div>
+                        </div>
+                        <!-- cd-timeline-content -->
+                    </div>
+                    <!-- cd-timeline-block -->
+
+                    <div class="cd-timeline-block">
+                        <div class="cd-timeline-img cd-picture">
+                        </div>
+                        <!-- cd-timeline-img -->
+
+                        <div class="cd-timeline-content">
+                            <h2>Skill-Up</h2>
+
+                            <div data-aos="fade-up" data-aos-delay="100">
+                                <img src="landingPageAssets/img/83685-hubit.gif" class="img-fluid description" alt="">
+                            </div>
+                        </div>
+                        <!-- cd-timeline-content -->
+                    </div>
+                    <!-- cd-timeline-block -->
+
+                    <div class="cd-timeline-block">
+                        <div class="cd-timeline-img cd-location">
+                        </div>
+                        <!-- cd-timeline-img -->
+
+                        <div class="cd-timeline-content">
+                            <h2>Delpoy</h2>
+
+                            <div data-aos="fade-up" data-aos-delay="100">
+                                <img src="landingPageAssets/img/88282-rocket.gif" class="img-fluid description" alt="">
+                            </div>
+                        </div>
+                        <!-- cd-timeline-content -->
+                    </div>
+                    <!-- cd-timeline-block -->
+
+                </section>
+                <!-- cd-timeline -->
 
             </div>
         </section>
