Fix: remove the gray feature on feature card

--- a/index.html
+++ b/index.html
@@ -91,36 +91,9 @@
         <section id="featured-services" class="featured-services">
             <div class="container" data-aos="fade-up">
 
-                <!-- <div style="display: none;" class="row">
-                    <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-                        <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
-                            <h4 style="margin-bottom: 2rem;" class="title text-center">Register</h4>
-                            <img src="landingPageAssets/img/82974-add-user.gif" class="img-fluid description" alt="">
-                        </div>
-                    </div>
-
-                    <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-                        <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
-                            <h4 style="margin-bottom: 2rem;" class="title text-center">Choose a track</h4>
-                            <img src="landingPageAssets/img/75244-analyse.gif" class="img-fluid description" alt="">
-                        </div>
-                    </div>
-
-                    <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-                        <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
-                            <h4 style="margin-bottom: 2rem;" class="title text-center">Skill up</h4>
-                            <img src="landingPageAssets/img/83685-hubit.gif" class="img-fluid description" alt="">
-                        </div>
-                    </div>
-
-                    <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-                        <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
-                            <h4 style="margin-bottom: 2rem;" class="title text-center">Deploy</h4>
-                            <img src="landingPageAssets/img/88282-rocket.gif" class="img-fluid description" alt="">
-                        </div>
-                    </div>
-
-                </div> -->
+                <div class="section-title">
+                    <h2>Featured</h2>
+                </div>
 
                 <div class="Timeline mt-3">
                     <div class="event1">
@@ -163,7 +136,7 @@
                         <line x1="0" y1="0" x2="150" y2="0" style="stroke:rgba(162, 164, 163, 0.37);stroke-width:5" />
                     </svg>
 
-                    <div class="event3 futureGray ">
+                    <div class="event3">
                         <div class="event1Bubble">
                             <div class="eventTime">
                                 <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
