Feat: remove feature title

--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
         <section id="featured-services" class="featured-services">
             <div class="container" data-aos="fade-up">
 
-                <div class="section-title">
+                <!-- <div class="section-title">
                     <h2>Featured</h2>
-                </div>
+                </div> -->
 
                 <div class="Timeline mt-3">
                     <div class="event1">
