testting landing page bg

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <!-- ======= Hero Section ======= -->
     <section id="hero" class="d-flex align-items-center justify-content-center">
-        <!-- <video src="landingPageAssets/Untitled.mp4" autoplay muted></video> -->
+        <video src="landingPageAssets/Untitled.mp4" autoplay muted></video>
 
         <div class="container" data-aos="zoom-out" data-aos-delay="100">
             <h1><span><i style="color: #0b72a2;">Gamma Prime</i></span></h1>
